# library-service

./: .env.example  .gitignore  Makefile  README.md  docker_compose.yaml  pyproject.toml
app/application/api/: main.py  schemas.py
app/application/api/authors/: handlers.py  schemas.py
app/application/api/books/: handlers.py  schemas.py
app/application/api/borrows/: handlers.py  schemas.py
app/domain/entities/: library.py
app/infra/database/: manager.py  models.py
app/infra/repositories/authors/: base.py  sqlalchemy_author_repository.py
app/infra/repositories/books/: base.py  sqlalchemy_book_repository.py
app/infra/repositories/borrows/: base.py  sqlalchemy_borrow_repository.py
app/logic/: init.py
app/logic/exceptions/: authors.py  base.py  books.py  borrows.py
app/logic/services/: authors.py  books.py  borrows.py
app/logic/use_cases/: base.py
app/logic/use_cases/authors/: create.py  delete.py  get.py  update.py
app/logic/use_cases/books/: create.py  delete.py  get.py  update.py
app/logic/use_cases/borrows/: create.py  get.py  update.py
app/settings/: config.py
